Fix Navbar dropdown visibility when logged out; add forgot password to SuperAdmin login

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -138,7 +138,7 @@
   z-index: 100;
 }
 
-.account-item:hover .account-dropdown {
+.account-item.logged-in:hover .account-dropdown {
   display: block;
 }
 
